--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-dropzone": "^10.2.2",
     "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
+    "react-json-tree": "^0.11.2",
     "react-markdown": "^4.3.1",
     "react-modal-image": "^2.5.0",
     "react-perfect-scrollbar": "^1.5.8",
