--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.6",
     "@mdx-js/react": "^1.5.8",
+    "@reach/router": "^1.3.3",
     "@react-pdf/renderer": "^1.6.8",
     "apexcharts": "^3.18.0",
     "axios": "^0.19.2",
