--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-scroll-into-view": "^1.8.1",
+    "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.2",
