--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-big-calendar": "^0.24.1",
     "react-chartjs-2": "^2.9.0",
     "react-country-region-selector": "^2.1.0",
+    "react-d3-speedometer": "^0.14.1",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
@@ -94,8 +95,10 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.1",
     "react-scroll-into-view": "^1.8.1",
+    "react-show-more-text": "^1.4.4",
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
