--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-draft-wysiwyg": "^1.14.4",
     "react-dropzone": "^10.2.2",
     "react-feather": "^2.0.3",
+    "react-google-charts": "^3.0.15",
     "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.3",
     "react-json-tree": "^0.11.2",
