Add browse wizard,create book demo page,add slider home page

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@mdx-js/react": "^1.5.8",
     "@reach/router": "^1.3.3",
     "@react-pdf/renderer": "^1.6.8",
-    "apexcharts": "^3.18.0",
+    "apexcharts": "^3.26.2",
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.17.0",
     "change-case": "^4.1.1",
@@ -94,11 +94,12 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^3.4.1",
-    "react-scroll-into-view": "^1.8.1",
+    "react-scroll-into-view": "^1.9.3",
     "react-show-more-text": "^1.4.4",
     "react-virtualized": "^9.21.2",
     "redux": "^4.0.5",
