--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-animate-on-scroll": "^2.1.5",
     "react-apexcharts": "^1.3.7",
     "react-app-polyfill": "^1.0.6",
     "react-beautiful-dnd": "^13.0.0",
@@ -84,6 +85,7 @@
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.4",
     "react-dropzone": "^10.2.2",
+    "react-fade-in": "^2.0.1",
     "react-feather": "^2.0.3",
     "react-google-charts": "^3.0.15",
     "react-helmet": "^5.2.1",
