--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     ]
   },
   "dependencies": {
+    "@babel/runtime": "^7.16.0",
     "@date-io/core": "^2.5.0",
     "@date-io/moment": "^1.3.13",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
@@ -40,12 +43,13 @@
     "@fullcalendar/react": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
     "@fullcalendar/timeline": "^4.4.0",
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "@mdx-js/react": "^1.5.8",
+    "@mui/material": "^5.0.6",
     "@reach/router": "^1.3.3",
     "@react-pdf/renderer": "^1.6.8",
     "apexcharts": "^3.26.2",
