--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "lodash": "^4.17.19",
     "material-table": "^1.57.2",
     "material-ui": "^1.0.0-beta.47",
+    "material-ui-pickers": "^2.2.4",
     "moment": "^2.24.0",
     "notistack": "^0.9.9",
     "nprogress": "^0.2.0",
