--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "@fullcalendar/react": "^4.4.0",
     "@fullcalendar/timegrid": "^4.4.0",
     "@fullcalendar/timeline": "^4.4.0",
+    "@iconify/icons-ant-design": "^1.1.0",
+    "@iconify/icons-eva": "^1.1.0",
+    "@iconify/icons-ic": "^1.1.10",
+    "@iconify/react": "^3.0.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
@@ -50,6 +54,7 @@
     "@material-ui/styles": "^4.10.0",
     "@mdx-js/react": "^1.5.8",
     "@mui/material": "^5.0.6",
+    "@mui/lab": "^5.0.0-alpha.47",
     "@reach/router": "^1.3.3",
     "@react-pdf/renderer": "^1.6.8",
     "apexcharts": "^3.26.2",
