--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "@mdx-js/react": "^1.5.8",
-    "@mui/material": "^5.0.6",
     "@mui/lab": "^5.0.0-alpha.47",
+    "@mui/material": "^5.0.6",
     "@reach/router": "^1.3.3",
     "@react-pdf/renderer": "^1.6.8",
     "apexcharts": "^3.26.2",
@@ -118,6 +118,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.2",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "uuid": "^7.0.3",
     "yup": "^0.28.3"
