Fixedniah api static code

--- a/install/DEBIAN/control
+++ b/install/DEBIAN/control
@@ -1,7 +1,7 @@
-Package: niah-api
+Package: niah-web
 Version: 0.0.1
 Architecture: all
 Maintainer: Jayesh Patel<jayesh@niahsecurity.io>
-Depends: python3-pip, python3-venv, nginx, postgresql, postgresql-contrib, python-psycopg2, libpq-dev
+Depends: nginx
 Homepage: https://niahsecurity.io
-Description: Niah API Server.
+Description: Niah Web Server.
