--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@mui/material": "^5.0.6",
     "@reach/router": "^1.3.3",
     "@react-pdf/renderer": "^1.6.8",
+    "antd": "^5.0.7",
     "apexcharts": "^3.26.2",
     "axios": "^0.19.2",
     "axios-mock-adapter": "^1.17.0",
