--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "react-scroll-into-view": "^1.9.3",
     "react-show-more-text": "^1.5.2",
     "react-virtualized": "^9.21.2",
+    "react-xml-viewer": "^1.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.3.2",
