--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "react-google-charts": "^3.0.15",
     "react-helmet": "^5.2.1",
     "react-js-pagination": "^3.0.3",
+    "react-json-formatter": "^0.3.2",
     "react-json-tree": "^0.11.2",
     "react-markdown": "^4.3.1",
     "react-modal-image": "^2.5.0",
